force-app/main/default/objects/MessagingSession/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Ensures that the Account linked to the authenticated session is assigned relative to the Contact authenticated in the ExperienceCloud portal.</description>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>