force-app/main/default/objects/MessagingSession/fields/AuthRequestTime__c.field-meta.xml
<CustomField>
    <fullName>AuthRequestTime__c</fullName>
    <description
  >Stores when authentication was requested, limiting the MessagingSession from being assigned identities outside of the directed window and allowing control of the timeframe during which external authentication is allowed.</description>
    <label>AuthRequestTime</label>
    <type>DateTime</type>
</CustomField>