force-app/main/default/objects/MessagingSession/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ensures that the Contact linked to the authenticated session is assigned relative to the Contact authenticated in the ExperienceCloud portal.</description>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>